# ros2-racer

./: .gitignore  .gitmodules  README.md  commands.md  issues.md  mav.parm  mav.tlog  mav.tlog.raw
.github/workflows/: deploy-dashboard.yml
config/: slam_toolbox_mapping.yaml
docs/: estop-usage.md  slam-v2-cheatsheet.md  slam-v2-presentation-guide.md
launch/: README.md  bringup_launch.py  green_follow_launch.py  line_follow_launch.py  line_vision_launch.py  slam_bringup.launch.py  slam_mapping_launch.py  slam_racing_launch.py  system_launch.py  wall_stop_launch.py  wl_nav_launch.py
src/: foo.txt
src/autonomy/: README.md  mapper_params_online_sync.yaml  package.xml  setup.py
src/autonomy/autonomy/: imu_adapter_node.py  interpolate_path.py  latest_map_race_gate_node.py  odometry_node.py  path_planner_node.py  path_recorder_node.py  pure_pursuit_node.py  slam_coordinator_node.py  wall_follower_node.py  wall_line_nav_node.py  wall_nav_node.py  yaml_utils.py
src/green_control/: package.xml  setup.cfg  setup.py
src/green_control/config/: green_control.yaml
src/green_control/green_control/: green_control.py
src/green_control/launch/: line_follower_launch.py
src/green_vision/: package.xml  setup.cfg  setup.py
src/green_vision/config/: rgb_config.yaml
src/green_vision/green_vision/: green_vision.py
src/image_processing/: RealSenseImageProcessing.py  desktop_stream.py  ros_stream.py  save_image_stream.py  testRealsense.py
src/image_processing/src/: imgProc_node.py
src/line_control/: package.xml  setup.cfg  setup.py
src/line_control/line_control/: line_control.py
src/mapping/: package.xml  setup.py
src/mapping/config/: rplidar_ros.rviz
src/mapping/launch/: online_sync_launch.py  slam_bringup.launch.py
src/perception/: README.md  package.xml  setup.py
src/perception/config/: rgb_config.yaml
src/perception/perception/: depth_node.py  line_detector.py  obstacle_detector_node.py  rgb_node.py  scan_filter_node.py
src/racer_bringup/: package.xml  setup.cfg  setup.py
src/racer_bringup/config/: slam_toolbox_localization.yaml
src/racer_bringup/launch/: latest_map_racing.launch.py  master_bringup.launch.py  slam_racing.launch.py  system.launch.py
src/racer_msgs/: CMakeLists.txt  package.xml
src/racer_msgs/msg/: RacerTelemetry.msg  StopSignEvent.msg
src/rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch.py
src/rf2o_laser_odometry/src/: CLaserOdometry2DNode.cpp
src/robo_rover/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
src/robo_rover/launch/: rover_launch.py
src/robo_rover/robo_rover/: rover_node.py
src/rs_stream/: package.xml  setup.cfg  setup.py
src/rs_stream/rs_stream/: rs_stream_node.py  snap_node.py
src/safety_monitor/: package.xml  setup.py
src/safety_monitor/safety_monitor/: monitor_state.py  rover_process_manager.py  safety_monitor_node.py  stale_detector.py
src/safety_monitor/test/: test_rover_process_manager.py  test_stale_detector.py
src/stop_sign/: package.xml  setup.cfg  setup.py
src/stop_sign/config/: stop_sign.yaml
src/stop_sign/launch/: stop_sign_launch.py
src/stop_sign/stop_sign/: cmd_vel_filter_node.py  snapshot.py  stop_sign_node.py  visualization.py  visualizer.py
src/stop_sign/stop_sign/algorithm/: detection.py  temporal.py
src/stop_sign/tests/: test_detection.py
src/telemetry/: package.xml  setup.py
src/telemetry/launch/: telemetry_launch.py
src/telemetry/telemetry/: telemetry_node.py
telemetry-dashboard/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  vite.config.ts
telemetry-dashboard/src/: App.css  App.tsx  index.css  telemetry.ts
telemetry-dashboard/src/assets/: recorded_path.yaml  recorded_path_20260501_061910.yaml  recorded_path_20260501_063703.yaml  recorded_path_20260501_071331.yaml  recorded_path_20260501_095146.yaml  recorded_path_20260501_101010.yaml  track.data  track.pgm  track.posegraph  track.yaml  track_20260501_071331.pgm  track_20260501_071331.yaml  track_20260501_101010.pgm
telemetry-dashboard/src/components/: BatteryPanel.tsx  CameraPanel.tsx  Charts.tsx  EventLog.tsx  LapLog.tsx  LidarCharts.tsx  LidarPolar.tsx  MapPanel.tsx  MotorHeatPanel.tsx  PathInspectorPanel.tsx  RawJson.tsx  Sparkline.tsx  SpeedPanel.tsx  StatusTiles.tsx
